force-app/main/default/objects/Driving_License_Regex_for_State__mdt/Driving_License_Regex_for_State__mdt.object-meta.xml
<CustomObject>
    <label>Driving License Regex for State</label>
    <pluralLabel>Driving License Regex for State</pluralLabel>
</CustomObject>