force-app/main/default/objects/Driving_License_Regex_for_State__mdt/fields/High_False_Positive_Rate__c.field-meta.xml
<CustomField>
    <fullName>High_False_Positive_Rate__c</fullName>
    <label>High False Positive Rate</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>