force-app/main/default/objects/Driving_License_Regex_for_State__mdt/fields/Pattern_Length__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Length__c</fullName>
    <description>To get the length of each pattern in apex code.</description>
    <label>Pattern Length</label>
    <length>250</length>
    <type>Text</type>
</CustomField>