force-app/main/default/objects/Driving_License_Regex_for_State__mdt/fields/Regex_for_DL_Masking__c.field-meta.xml
<CustomField>
    <fullName>Regex_for_DL_Masking__c</fullName>
    <label>Regex for DL Masking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>