force-app/main/default/objects/Driving_License_Regex_for_State__mdt/fields/State_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>State_Abbreviation__c</fullName>
    <label>State Abbreviation</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>